--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "include": ["src/**/*"],
     "compilerOptions": {
-      "target": "es2016",
-      "module": "commonjs",
+      "target": "ES2022",
+      "module": "CommonJS",
       "esModuleInterop": true,
       "forceConsistentCasingInFileNames": true,
       "strict": true,
