--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb+srv://sajtimartin:V2qhakFV5tAfQ30y@biralocluster.lur7bna.mongodb.net/?retryWrites=true&w=majority&appName=BiraloCluster
+ATLAS_URI=mongodb+srv://sajtimartin:V2qhakFV5tAfQ30y@biralocluster.lur7bna.mongodb.net/BiroDatabase?retryWrites=true&w=majority&appName=BiraloCluster
